--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 <header>
-    <h1 class = "title">Continuous Glucose Monitor Project</h1>
+    <h1 class = "title">My Continuous Glucose Monitor Project</h1>
     <div class = "navbar">
         <ul>
             <a href="#idea">The Idea</a>
